--- a/file.html
+++ b/file.html
@@ -14,12 +14,21 @@
             h1 {
                 background-color: blue;
             }
+            #download {
+                background-color: yellow;
+                height: 300px;
+                width: 400px;
+            }
         </style>
     </head>
 
     <body>
       <h1>Sample report</h1>
       <p>Oh Look! It's Working</p>
+
+      <div id="download">
+          <h2>Hello world</h2>
+      </div>
     </div>
     </body>
     </html>
